Fix e2e build for Java8